# aoc2021

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  entangled.dhall  x2021.cabal
_site/: config.toml
_site/assets/: _custom.scss
_site/content/: index.md
_site/content/lit/: boilerplate.md  day01.md  day02.md
_site/resources/_gen/assets/scss/aoc2021/: book.scss_50fc8c04e12a2f59027287995557ceff.content  book.scss_50fc8c04e12a2f59027287995557ceff.json
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day10Alt.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Dijkstra.hs  IntDist.hs  Main.hs  Parsing.hs  Print.hs  Tally.hs
app/Parsing/: Binary.hs
data/: day01.txt  day02.txt  day04.txt  day05-plot.txt  day06.txt  day09-output.txt  day09-test.txt  day11-output.txt  day11.txt  day13-output.txt  day13.txt  day15.txt  day17-output.txt  day17-output2.txt  day17.txt  day23.txt
docs/: 404.html  dark.css  en.search-data.min.4fe59963053a69411de3c08e2859d191cd49df9c8254ee586f2e8074db96fa1d.json  en.search.min.831c398750a4b278e16b9290614389a25effd15e0cc4773c5a841c45855da1c9.js  index.html  index.xml  manifest.json  sitemap.xml
docs/categories/: index.html  index.xml
docs/categories/page/1/: index.html
docs/css/: named-code-blocks.css
docs/tags/: index.html  index.xml
docs/tags/page/1/: index.html
lit/: boilerplate.md  day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day22.md  day23.md  day24.md
scripts/: annotate.lua  gnuplot.lua  hide.lua  make.lua
templates/: dark.css  dark.html  dark.theme  gnuplot.preamble
